# fara-fafa

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: manage.py
src/farafafa/: asgi.py  settings.py  urls.py  wsgi.py
src/ministrant/: apps.py
src/ministrant/migrations/: 0001_initial.py
src/ministrant/models/: __init__.py  person.py
